force-app/main/default/objects/MUSW__Exam__c/MUSW__Exam__c.object-meta.xml
<CustomObject>
    <label>Exam</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>