force-app/main/default/objects/MUSW__Exam__c/fields/MUSW__Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Date__c</fullName>
    <description>The date the exam was taken</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>