force-app/main/default/objects/MUSW__Exam__c/fields/MUSW__Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Name__c</fullName>
    <description>The name of the exam</description>
    <label>Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>