force-app/main/default/objects/MUSW__Exam__c/fields/MUSW__Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Related_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact who this Exam is related to.</description>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Exams</relationshipLabel>
    <relationshipName>Exams</relationshipName>
    <type>Lookup</type>
</CustomField>