force-app/main/default/objects/MUSW__Exam__c/fields/MUSW__Score__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Score__c</fullName>
    <description>The numerical or text value that represents the score of the Exam.</description>
    <label>Score</label>
    <length>50</length>
    <type>Text</type>
</CustomField>